# ToStamp

./: .gitignore
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  tostamp_dev.db
backend/alembic/: env.py
backend/alembic/versions/: 5e0c7a18c5fa_baseline_schema.py
backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
backend/app/api/: websocket.py
backend/app/api/v1/: affiliate.py  auth.py  customers.py  exchange.py  marketing.py  notifications.py  stamps.py  stores.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  affiliate.py  agent_policy.py  coupon.py  customer.py  marketplace.py  money.py  stamp_card.py  store.py  visit.py
backend/app/schemas/: affiliate.py  customer.py  exchange.py  marketing.py  stamp.py  store.py
backend/app/services/: affiliate_service.py  agent_service.py  exchange_service.py  fcm_service.py  merge_service.py  qr_service.py  scheduler.py  segmentation_service.py  stamp_helpers.py  stamp_service.py
backend/tests/: conftest.py  test_acceptance.py  test_api.py  test_stamp_latency.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/assets/animations/: .gitkeep
frontend/assets/images/: .gitkeep
frontend/lib/: main_boss.dart  main_customer.dart
frontend/lib/core/network/: api_client.dart  ws_client.dart
frontend/lib/core/theme/: app_colors.dart  app_theme.dart  app_typography.dart
frontend/lib/core/utils/: uuid_manager.dart
frontend/web/: index.html  manifest.json
infra/: cloudbuild.yaml
(+21 files in other folders)
