[project]
name = "tostamp-backend"
version = "0.1.0"
description = "ToStamp - 소상공인 마케팅 에이전트 서비스 백엔드"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache
    "redis[hiredis]>=5.2.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    # Firebase
    "firebase-admin>=6.5.0",
    # Utilities
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    # MCP
    "mcp>=1.0.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
